--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="It is a Website to generate Pdf of a receipt">
+  <meta og:description = "It is a Website to generate Pdf of a receipt" 
+        og:image="android-chrome-512x512.png" 
+        og:title="Receipt Generator"
+        og:url="https://dynamicshubham.github.io/hc/">
   <title>Receipt Generator</title>
-<!--   <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
@@ -22,7 +26,7 @@
       <label for="customerAddress">Customer Address:</label>
       <input type="text" id="customerAddress" placeholder = "Enter your Address" required>
 
-      <button id="addItemBtn" onclick="showItemForm()">Add Item</button>
+      <button id="addItemBtn" onclick="showItemForm()">Continue</button>
     </div>    
 
 
@@ -33,14 +37,14 @@
         <input type="text" id="itemName" placeholder = "Enter item name" required>
 
         <label for="itemQuantity">Item Quantity:</label>
-        <input type="number" id="itemQuantity" placeholder = "Enter Quantity required">
+        <input type="number" id="itemQuantity" placeholder = "Enter Quantity" required>
 
         <label for="itemPrice">Item Price Per Piece (in ₹):</label>
         <input type="number" id="itemPrice" placeholder = "Enter item price per piece" required>
 
         <button type="button" onclick="addItem()">Add Item</button>
       </form>
-        <label for="received">Amount received ₹):</label>
+        <label for="received">Amount received ₹:</label>
         <input type="number" id="received" placeholder = "Enter the Amount Received" required>
     </div>
 
