--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <label for="customerAddress">Customer Address:</label>
       <input type="text" id="customerAddress" placeholder = "Enter your Address" required>
 
-      <button id="addItemBtn" onclick="showItemForm()">Continue</button>
+      <button id="addItemBtn" onclick="showItemFor()">Continue</button>
     </div>    
 
 
@@ -49,7 +49,7 @@
     </div>
 
     <div id="receipt"></div>
-    <button id="generateBtn" onclick="generatePDF()">Generate PDF</button>
+    <button id="generateBtn" onclick="generatePD()">Generate PDF</button>
   </div>
 
   <script src="script.js"></script>
