--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <label for="customerAddress">Customer Address:</label>
       <input type="text" id="customerAddress" placeholder = "Enter your Address" required>
 
-      <button id="addItemBtn" onclick="showItemForm()">Continue</button>
+      <button id="addItemBtn" onclick="showItemFor()">Continue</button>
     </div>    
 
 
